--- a/src/Components/NavBar/navbar.scss
+++ b/src/Components/NavBar/navbar.scss
@@ -136,8 +136,6 @@
 }
 
 .user-info__footer {
-  position: absolute;
-  bottom: 2rem;
   font-size: 1.2rem;
   opacity: 0.82;
 }
@@ -203,21 +201,34 @@
       display: block;
       width: 100%;
       text-align: center;
-    }
 
-    .menu__icon {
-      color: $color-icon;
-      font-size: 2.8rem;
-      transition: all 300ms ease-in-out;
+      .menu__icon {
+        color: $color-icon;
+        font-size: 2.8rem;
+        transition: all 300ms ease-in-out;
+      }
+
+      .menu__overlay {
+        position: absolute;
+        right: 0;
+        margin-top: -3.7rem;
+        display: block;
+        opacity: 0;
+        padding: 0.5rem 1rem;
+        color: $color-principal;
+        background-color: $color-secondary;
+        white-space: nowrap;
+        transition: all 300ms ease-in-out;
+      }
     }
 
     .menu__option:hover .menu__icon {
       color: $color-secondary;
     }
 
-    .menu__overlay {
-      opacity: 0;
-      display: none;
+    .menu__option:hover .menu__overlay {
+      opacity: 1;
+      right: 100%;
     }
   }
 }
