--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "../src/Components/variables.scss";
+
 * {
   margin: 0;
   padding: 0;
@@ -59,4 +61,42 @@ label {
   font-family: inherit;
   font-size: inherit;
   color: inherit;
+}
+
+/* Maquetacion de todo el layout */
+
+.layout {
+  position: relative;
+  min-width: 1290px;
+  width: 75%;
+  height: 80vh;
+  min-height: 80vh;
+  margin: 10vh auto;
+
+  display: grid;
+  grid-template-areas: "aside content";
+  grid-template-columns: 30% 70%;
+
+  border-radius: 4rem;
+  box-shadow: 0 0 100px -5px rgba(0, 0, 0, 0.25);
+}
+
+.layout__content {
+  grid-area: content;
+  height: 100%;
+  min-height: 100%;
+
+  background-color: $color-secondary;
+  border-radius: 0 10rem 10rem 0;
+
+  .content__page {
+    min-height: 100%;
+    background-color: $color-principal;
+    border-radius: 3.2rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
