--- a/src/Components/NavBar/navbar.scss
+++ b/src/Components/NavBar/navbar.scss
@@ -1,92 +1,77 @@
 @import "../variables.scss";
 
-.layout {
-  position: relative;
-  min-width: 1290px;
-  width: 75%;
-  height: 80vh;
-  min-height: 80vh;
-  margin: 10vh auto;
-
-  display: grid;
-  grid-template-areas: "aside content";
-  grid-template-columns: 30% 70%;
-
-  border-radius: 4rem;
-  box-shadow: 0 0 100px -5px rgba(0, 0, 0, 0.25);
-}
-
 .layout__aside {
   grid-area: aside;
 
   border-radius: 4rem 0 0 4rem;
   overflow: auto;
   overflow-x: hidden;
+
+  .aside__user-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    min-height: 100%;
+    min-width: 30rem;
+
+    background-color: $color-secondary;
+    color: $color-principal;
+  }
+
+  .user-info__container-img {
+    position: relative;
+    display: inline-block;
+    width: 15rem;
+    margin-top: 7rem;
+    z-index: 1;
+
+    .user-info__img {
+      width: 100%;
+      background-color: $color-principal;
+      border: 3px solid $color-principal;
+      border-radius: 20rem;
+      position: relative;
+    }
+  }
+
+  .user-info__container-img::after {
+    content: "";
+    position: absolute;
+    top: 5%;
+    left: 9%;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background-image: -webkit-repeating-radial-gradient(
+      center center,
+      #fff,
+      #fff 1px,
+      transparent 0px,
+      transparent 100%
+    );
+    background-size: 0.5rem 0.6rem;
+    opacity: 0.3;
+    border-radius: 20rem;
+  }
+
+  .user-info__name {
+    margin-top: 2.6rem;
+    font-size: 3.2rem;
+    font-weight: bold;
+    color: $color-principal;
+  }
+
+  .user-info__job {
+    font-size: 1.7rem;
+    font-weight: 200;
+    color: $color-principal;
+    opacity: 0.82;
+  }
 }
 
-.aside__user-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-
-  min-height: 100%;
-  min-width: 30rem;
-
-  background-color: $color-secondary;
-  color: $color-principal;
-}
-
-.user-info__container-img {
-  position: relative;
-  display: inline-block;
-  width: 15rem;
-  margin-top: 7rem;
-  z-index: 1;
-}
-
-.user-info__img {
-  width: 100%;
-  background-color: $color-principal;
-  border: 3px solid $color-principal;
-  border-radius: 20rem;
-  position: relative;
-}
-
-.user-info__container-img::after {
-  content: "";
-  position: absolute;
-  top: 5%;
-  left: 9%;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background-image: -webkit-repeating-radial-gradient(
-    center center,
-    #fff,
-    #fff 1px,
-    transparent 0px,
-    transparent 100%
-  );
-  background-size: 0.5rem 0.6rem;
-  opacity: 0.3;
-  border-radius: 20rem;
-}
-
-.user-info__name {
-  margin-top: 2.6rem;
-  font-size: 3.2rem;
-  font-weight: bold;
-  color: $color-principal;
-}
-
-.user-info__job {
-  font-size: 1.7rem;
-  font-weight: 200;
-  color: $color-principal;
-  opacity: 0.82;
-}
-
+/* Iconos de redes */
 .user-info__links {
   margin-bottom: 3.6rem;
 
@@ -114,6 +99,7 @@
   }
 }
 
+/* Boton de CV */
 .user-info__buttons {
   margin-top: 2rem;
   margin-bottom: 15rem;
@@ -132,42 +118,6 @@
   .user-info__btn:hover {
     background-color: $color-principal;
     color: $color-secondary;
-  }
-}
-
-.user-info__footer {
-  font-size: 1.2rem;
-  opacity: 0.82;
-}
-
-.layout__content {
-  grid-area: content;
-  height: 100%;
-  min-height: 100%;
-
-  background-color: $color-secondary;
-  border-radius: 0 10rem 10rem 0;
-
-  .content__page {
-    min-height: 100%;
-    background-color: $color-principal;
-    border-radius: 3.2rem;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    .page__name {
-      font-size: 6rem;
-      margin-bottom: 1rem;
-    }
-
-    .page__job {
-      font-size: 2.1rem;
-      font-weight: lighter;
-      color: $color-subtitle;
-    }
   }
 }
 
