--- a/src/App.scss
+++ b/src/App.scss
@@ -90,6 +90,7 @@ label {
   border-radius: 0 10rem 10rem 0;
 
   .content__page {
+    height: 100%;
     min-height: 100%;
     background-color: $color-principal;
     border-radius: 3.2rem;
