--- a/src/Components/Curriculum/curriculum.scss
+++ b/src/Components/Curriculum/curriculum.scss
@@ -94,12 +94,122 @@
               margin-bottom: 1rem;
             }
           }
+
+          .timeline__divider {
+            position: absolute;
+            top: 0;
+            bottom: -18px;
+            left: 30%;
+            width: 1px;
+            background-color: $color-icon;
+            opacity: 0.5;
+          }
+
+          .timeline__divider::before {
+            content: "";
+            position: absolute;
+            margin-top: 0.4rem;
+            margin-left: -0.8rem;
+            width: 1.7rem;
+            height: 1.7rem;
+            background-color: $color-secondary;
+            border-radius: 10rem;
+            opacity: 0.25;
+          }
+
+          .timeline__divider::after {
+            content: "";
+            position: absolute;
+            margin-top: 0.8rem;
+            margin-left: -0.4rem;
+            width: 0.9rem;
+            height: 0.9rem;
+            background-color: $color-principal;
+            border-radius: 10rem;
+            border: 2px solid $color-secondary;
+            opacity: 1;
+          }
         }
       }
     }
 
     .resume__rigth {
       flex-basis: 41%;
+      padding: 0 1.5rem;
+
+      .resume__skills {
+        width: 100%;
+        margin-bottom: 3rem;
+
+        .skills__title {
+          display: flex;
+          justify-content: space-between;
+
+          .skills__text {
+            font-size: 1.3rem;
+            line-height: 1.4rem;
+            margin-bottom: 0.4rem;
+          }
+
+          .skills__number {
+            font-size: 1.1rem;
+            line-height: 1.4rem;
+            margin-bottom: 0.4rem;
+            color: $color-subtitle;
+          }
+        }
+
+        .skills__progessbar {
+          width: 100%;
+          height: 1rem;
+          border: 1px solid $color-secondary;
+          border-radius: 1rem;
+          background-color: $color-principal;
+          margin-bottom: 2.5rem;
+
+          .skills__percentage {
+            width: 40%;
+            height: 0.8rem;
+            background-color: $color-secondary;
+            border: 2px solid $color-principal;
+            border-radius: 1rem;
+          }
+
+          .skills__percentage--p1 {
+            width: 40%;
+          }
+          .skills__percentage--p2 {
+            width: 20%;
+          }
+          .skills__percentage--p3 {
+            width: 90%;
+          }
+          .skills__percentage--p4 {
+            width: 65%;
+          }
+          .skills__percentage--p5 {
+            width: 50%;
+          }
+          .skills__percentage--p6 {
+            width: 30%;
+          }
+        }
+      }
+
+      .knowledges__list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+
+        .knowledges__option {
+          padding: 0.4rem 1rem;
+          margin: 0.3rem;
+          font-size: 1.4rem;
+          background-color: $color-secondary;
+          border-radius: 0.3rem;
+          color: $color-principal;
+        }
+      }
     }
 
     .resume__subheader {
@@ -128,6 +238,52 @@
         );
         background-size: 6px 6px;
         opacity: 0.3;
+      }
+    }
+  }
+
+  .certificates__container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 3rem;
+
+    .certificates__certificate {
+      flex-basis: calc(50% - 1.5rem);
+      border: 2px solid $color-border-reviews;
+      border-radius: 0.8rem;
+
+      display: flex;
+      flex-direction: row;
+
+      .certificate__logo {
+        width: 15rem;
+        height: 100%;
+        padding: 2.5rem;
+        background-color: $color-background-certificate;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .certificate__img {
+          width: 100%;
+        }
+      }
+
+      .certificate__content {
+        padding: 2rem 2.5rem;
+
+        .certificate__title {
+          font-size: 1.5rem;
+          margin-bottom: 0.5rem;
+        }
+
+        .certificate__date {
+          font-size: 1rem;
+          color: $color-subtitle;
+          opacity: 0.7;
+        }
       }
     }
   }
