--- a/src/Components/variables.scss
+++ b/src/Components/variables.scss
@@ -8,3 +8,6 @@ $color-icon: #b5b6b7;
 $color-title: #222222;
 $color-subtitle: #888;
 $color-text: #555;
+
+$color-border-reviews: #e5e6e7;
+$color-background-certificate: #f5f5f5;
