--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -3,10 +3,12 @@
 .page__name {
   font-size: 6rem;
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 .page__job {
   font-size: 2.1rem;
   font-weight: lighter;
   color: $color-subtitle;
+  text-align: center;
 }
