--- a/src/Components/variables.scss
+++ b/src/Components/variables.scss
@@ -11,3 +11,8 @@ $color-text: #555;
 
 $color-border-reviews: #e5e6e7;
 $color-background-certificate: #f5f5f5;
+
+$color-scrollbar: #dedede;
+$color-background-scrollbar: #eee;
+
+$color-background-contact: #fcfcfc;
