--- a/src/Components/responsive.scss
+++ b/src/Components/responsive.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 @media (max-width: 1490px) {
   body {
     padding: 0;
@@ -86,13 +88,109 @@
     grid-template-areas: "content";
     grid-template-columns: 100%;
 
+    /* Menu hamburguesa */
+    .layout__menu-toggle {
+      z-index: 9999;
+      display: block;
+      position: absolute;
+      right: 1rem;
+      top: 1rem;
+      width: 4.6rem;
+      height: 4.6rem;
+      line-height: 5.2rem;
+      font-size: 2.2rem;
+      text-align: center;
+      background-color: $color-secondary;
+      color: $color-principal;
+      border-radius: 3rem;
+      cursor: pointer;
+      transition: all 500ms ease-in-out;
+
+      .menu-toggle__icon {
+        color: $color-principal;
+        display: block;
+        position: absolute;
+        top: 5%;
+        left: 23.5%;
+        transition: all 300ms ease-in-out;
+      }
+    }
+
     .layout__aside {
-      display: none;
+      z-index: 999;
+      display: block;
+      position: absolute;
+      max-width: 330px;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      text-align: center;
+      overflow: auto;
+
+      border-radius: 0;
+      transition: all 300ms ease-in-out;
+
+      margin-right: -100%;
+      opacity: 0;
+
+      .user-info__container-img {
+        width: 13rem;
+        margin-top: 2rem;
+        display: inline-block;
+      }
+
+      .user-info__name {
+        font-size: 2.5rem;
+        margin-top: 0.5rem;
+        margin-bottom: 1rem;
+      }
 
       /* Estilos de nav */
       .layout__nav {
         position: static;
+        margin: 3rem 0;
+
+        .menu__list {
+          position: static;
+          width: 100%;
+          background-color: $color-secondary;
+          box-shadow: none;
+          margin-left: 0;
+
+          .menu__icon {
+            display: none;
+          }
+
+          .menu__overlay {
+            position: static;
+            opacity: 0.7;
+            margin-top: 0;
+            padding: 0;
+            box-shadow: none;
+            font-size: 1.6rem;
+          }
+        }
       }
+
+      .links__social {
+        margin-top: 0;
+      }
+
+      .user-info__footer {
+        position: static;
+        padding-bottom: 2rem;
+      }
+    }
+
+    .layout__aside--visible {
+      width: 100%;
+      margin-right: 0;
+      opacity: 1;
+    }
+
+    .layout__aside--hidden {
+      margin-right: -100%;
+      opacity: 0;
     }
 
     /* Estilos del contenido */
