evitando que el responsive se rompa

--- a/src/Components/responsive.scss
+++ b/src/Components/responsive.scss
@@ -87,6 +87,7 @@
 
     grid-template-areas: "content";
     grid-template-columns: 100%;
+    overflow-x: hidden;
 
     /* Menu hamburguesa */
     .layout__menu-toggle {
