--- a/src/Components/Curriculum/curriculum.scss
+++ b/src/Components/Curriculum/curriculum.scss
@@ -242,47 +242,78 @@
     }
   }
 
-  .certificates__container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 3rem;
+  .resume__certificates {
+    .resume__subheader {
+      display: inline-block;
+      padding-right: 1.2rem;
+      margin-bottom: 2rem;
+      position: relative;
 
-    .certificates__certificate {
-      flex-basis: calc(50% - 1.5rem);
-      border: 2px solid $color-border-reviews;
-      border-radius: 0.8rem;
-
-      display: flex;
-      flex-direction: row;
-
-      .certificate__logo {
-        width: 15rem;
-        height: 100%;
-        padding: 2.5rem;
-        background-color: $color-background-certificate;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        .certificate__img {
-          width: 100%;
-        }
+      .resume__subtitle {
+        font-size: 2.1rem;
       }
 
-      .certificate__content {
-        padding: 2rem 2.5rem;
+      .resume__subtitle::after {
+        content: "";
+        position: absolute;
+        top: 15px;
+        right: 0;
+        width: 30px;
+        height: 20px;
+        background-image: -webkit-repeating-radial-gradient(
+          center center,
+          $color-secondary,
+          $color-secondary 1px,
+          transparent 0px,
+          transparent 100%
+        );
+        background-size: 6px 6px;
+        opacity: 0.3;
+      }
+    }
 
-        .certificate__title {
-          font-size: 1.5rem;
-          margin-bottom: 0.5rem;
+    .certificates__container {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 3rem;
+
+      .certificates__certificate {
+        flex-basis: calc(50% - 1.5rem);
+        border: 2px solid $color-border-reviews;
+        border-radius: 0.8rem;
+
+        display: flex;
+        flex-direction: row;
+
+        .certificate__logo {
+          width: 15rem;
+          height: 100%;
+          padding: 2.5rem;
+          background-color: $color-background-certificate;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .certificate__img {
+            width: 100%;
+          }
         }
 
-        .certificate__date {
-          font-size: 1rem;
-          color: $color-subtitle;
-          opacity: 0.7;
+        .certificate__content {
+          padding: 2rem 2.5rem;
+
+          .certificate__title {
+            font-size: 1.5rem;
+            margin-bottom: 0.5rem;
+          }
+
+          .certificate__date {
+            font-size: 1rem;
+            color: $color-subtitle;
+            opacity: 0.7;
+          }
         }
       }
     }
