cambios en layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -78,7 +78,7 @@ label {
   grid-template-columns: 30% 70%;
 
   border-radius: 4rem;
-  box-shadow: 0 0 100px -5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 10px 100px -5px rgb(1, 158, 255);
 }
 
 .layout__content {
