--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,7 @@ h6 {
 }
 
 body {
+  background-color: #0f0f0f;
   background-image: url("../public/img/fondo.png");
   background-size: cover;
   background-repeat: no-repeat;
