--- a/src/Components/variables.scss
+++ b/src/Components/variables.scss
@@ -10,7 +10,9 @@ $color-subtitle: #888;
 $color-text: #555;
 
 $color-border-reviews: #e5e6e7;
-$color-background-certificate: #f5f5f5;
+$color-background-certificateCoderHouse: #e8ff3c;
+$color-background-certificateUdemy: #f5f5f5;
+$color-background-certificateMiracle: #00182a;
 
 $color-scrollbar: #dedede;
 $color-background-scrollbar: #eee;
